--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>{% block title %}Layoff{% endblock %}</title>
-<link rel="stylesheet" href="{{ url_for('static', path='styles.css') }}?v=2">
+<link rel="stylesheet" href="{{ url_for('static', path='styles.css') }}">
 
 </head>
 <body>
