--- a/templates/base.html
+++ b/templates/base.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>{% block title %}Layoff{% endblock %}</title>
-<link rel="stylesheet" href="{{ url_for('static', path='styles.css') }}">
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>{% block title %}Layoff Betting{% endblock %}</title>
+  <link rel="stylesheet" href="{{ url_for('static', path='styles.css') }}">
+  {% block head_extra %}{% endblock %}
 </head>
 <body>
 
