Fix calculator template: remove duplicate scripts block and stray </body></html>

--- a/templates/calculator.html
+++ b/templates/calculator.html
@@ -485,8 +485,8 @@
   }
 </script>
 {% endblock %}
-  <!-- Footer content here -->
-
-  {% block scripts %}{% endblock %}
-</body>
-</html>
+ {% block scripts %}
+<script>
+  // ...all your JS (calculateLayoff, addLiveBet, etc.)...
+</script>
+{% endblock %}
